# IndexInterface

./: CMakeLists.txt  README.md
lib/: IndexInterface.cpp  IndexInterface.hpp
tests/: TestIndexInterface.cpp
